# fits_web_ql

./: .gitignore  Cargo.lock.bak  Cargo.toml  Cargo.toml.bak  LICENSE  Makefile  README.md  build.rs  clean_cache.sh  compileOgvDecoderVideoVP9.sh  diff.txt  error.txt  ffmpeg.sh  fits.h  header.txt  libvpx.txt  log4rs.yaml  machines  main.rs  memory_usage.csv  module-post.js  nro.txt  wrapper.h
.cargo/: config  config.toml
FFmpeg/: config.asm  config.h
FFmpeg/doc/: config.texi
FFmpeg/ffbuild/: config.fate  config.mak  config.sh
FFmpeg/libavcodec/: allcodecs.c  codec_list.c  error_resilience.h  golomb.h  hevcdec.h
FFmpeg/libavfilter/: filter_list.c
FFmpeg/libavutil/: buffer_internal.h  dict.c  frame.c  parseutils.c  parseutils.h  random_seed.c  time_internal.h
Julia/: memory_usage.jl
htdocs/: almawebql.css  almawebql.html  almawebql.js  almawebql3.html  fitswebql.css  fitswebql.html  fitswebql.js
htdocs/fitswebql/: colourmaps.js  contour_worker.js  fitswebql.css  fitswebql.js  fpzip.WASM2020-06-18.0.js  fpzip.WASM2020-06-18.0.wasm  fpzip.WASM2024-04-25.0.js  fpzip.WASM2024-04-25.0.wasm  fpzip.WASM2024-05-07.0.js  fpzip.WASM2024-05-07.0.wasm  fpzip.WASM2024-09-06.0.js  fpzip.WASM2024-09-06.0.wasm  fpzip.WASM2025-01-20.0.js  fpzip.WASM2025-01-20.0.wasm  hevc.js  hevc.wasm  hevc_WASM2018-12-14.0.js  hevc_WASM2018-12-14.0.wasm  hevc_WASM2018-12-17.0.js  hevc_WASM2018-12-17.0.wasm  hevc_WASM2019-02-08.0.js  hevc_WASM2019-02-08.0.wasm  hevc_WASM2019-02-08.1.js  hevc_WASM2019-02-08.1.wasm  hevc_WASM2020-06-22.0.js  hevc_WASM2020-06-22.0.wasm  hevc_WASM2024-04-25.0.js  hevc_WASM2024-04-25.0.wasm  hevc_WASM2024-05-07.0.js  hevc_WASM2024-05-07.0.wasm  hevc_WASM2024-09-06.0.js  hevc_WASM2024-09-06.0.wasm  hevc_WASM2025-01-20.0.js  hevc_WASM2025-01-20.0.wasm  ogv-decoder-video-vp9-wasm.js  ogv-decoder-video-vp9-wasm.wasm  ogv-decoder-video-vp9.js  ogv.js  ra_dec_conversion.js  reconnecting-websocket.js  (+4 more)
native/: fits.h
src/: colourmap.c  colourmap.h  encoder.rs  fits.ispc  fits.rs  fits_nng.rs  fits_zeromq.rs  hevc_decoder.c  hevc_decoder.cpp  kalman.rs  main.cc  main.rs  molecule.rs  scratchpad.rs  server.rs  stdatomic.h  vpx_decoder.c
