[package]
name = "fits_web_ql"
version = "4.2.13"
authors = ["jvo203 <chris.zapart@nao.ac.jp>"]
edition = "2021"

[features]
default = ["hevc"]
jvo = []
use-intrinsics = []
hevc = []
vp9 = []
production = []
cdn = []
cuda = []
opencl = ["ocl", "rand"]
zfp = ["zfp-sys"]
ipp = ["ipp-sys"]
mem = ["jemalloc-sys"]
raid = []

[build-dependencies]
bindgen = "*"
metadeps = "*"
ispc = "*"

[package.metadata.pkg-config]
x265 = "0.0" # was 2.8 but version recognition is broken on macos right now! 
vpx = "1.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
thread-priority = "*"

[dependencies]
jemallocator = "*"
jemalloc-sys = { version = "*", optional = true }
actix = "0.10"
actix-http = "*"
actix-web = "3"
actix-web-actors = "*"
actix-files = "*"
http = "*"
serde_json = "*"
chrono = "*"
dirs = "*"
#//cannot be used with a non-nightly stable Rust?
#half = { version = "*", features = ["use-intrinsics"] }
half = "*"
lazy_static = "*"
scan_fmt = "*"
bytes = "*"
byteorder = "*"
uuid = { version = "*", features = ["v3", "v4"] }
percent-encoding = "*"
futures = "*"
parking_lot = "*"
rusqlite = "*"
rayon = "*"
time = "*"
num-integer = "*"
num-rational = "*"
libvpx-native-sys = {version = "*", git = "https://github.com/jvo203/rust-vpx.git", features = ["generate"]}
num = "*"
num_cpus = "*"
serde = "*"
serde_derive = "*"
bincode = "*"
curl = "*"
timer = "*"
positioned-io = "*"
atomic = "*"
log = "*"
flexi_logger = "*"
regex = "*"
lz4-compress = "*"
postgres = "*"
tar = "*"
flate2 = "*"
bzip2 = "*"
ispc = "*"
lttb = "*"
ocl = {version = "*", optional = true}
rand = {version = "*", optional = true}
#zfp-sys = {version = "*", optional = true}#, features = ["cuda"]}
zfp-sys = {version = "*", optional = true}#, git = "https://github.com/jvo203/zfp-sys.git"}
ipp-sys = { version = "*", features=["2019"], optional = true }
fpzip-sys = "=0.1.3"

#rulinalg = "*"
#linearkalman = "*"
#rav1e = { git = "https://github.com/xiph/rav1e.git", branch = "master" }
#openjpeg2-sys = "*"
