[package]
name = "fits_web_ql"
version = "4.3.1"
authors = ["jvo203 <chris.zapart@nao.ac.jp>"]
edition = "2021"

[features]
default = ["hevc"]
jvo = []
use-intrinsics = []
hevc = []
vp9 = []
production = []
cdn = []
cuda = []
opencl = ["ocl", "rand"]
zfp = ["zfp-sys"]
ipp = ["ipp-sys"]
mem = ["jemalloc-sys"]
raid = []

[build-dependencies]
bindgen = "*"
metadeps = "*"
ispc = "1.0.14"

[package.metadata.pkg-config]
x265 = "0.0" # was 2.8 but version recognition is broken on macos right now! 
vpx = "1.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
thread-priority = "*"

[dependencies]
jemallocator = "0.3.2"
jemalloc-sys = { version = "0.3.2", optional = true }
actix = "0.10"
actix-http = "2.2.2"
actix-web = "3.3.3"
actix-web-actors = "3.0.0"
actix-files = "0.5.0"
csv = "1.1.6"
http = "0.2.6"
serde_json = "1.0.79"
chrono = "0.4.19"
dirs = "4.0.0"
#//cannot be used with a non-nightly stable Rust?
#half = { version = "*", features = ["use-intrinsics"] }
half = "1.8.2"
lazy_static = "1.4.0"
scan_fmt = "0.2.6"
bytes = "0.5.6"
byteorder = "1.4.3"
uuid = { version = "0.8.2", features = ["v3", "v4"] }
percent-encoding = "2.1.0"
futures = "0.3.21"
parking_lot = "0.12.0"
rusqlite = "0.26.3"
rayon = "1.5.1"
time = "0.3.7"
num-integer = "0.1.44"
num-rational = "0.4.0"
libvpx-native-sys = {version = "*", git = "https://github.com/jvo203/rust-vpx.git", features = ["generate"]}
num = "0.4.0"
num_cpus = "1.13.1"
serde = "1.0.136"
serde_derive = "1.0.136"
bincode = "1.3.3"
curl = "0.4.42"
timer = "0.2.0"
positioned-io = "0.2.2"
atomic = "0.5.1"
log = "0.4.14"
flexi_logger = "0.22.3"
regex = "1.5.4"
lz4-compress = "0.1.1"
postgres = "0.19.2"
tar = "0.4.38"
flate2 = "1.0.22"
bzip2 = "0.4.3"
ispc = "1.0.14"
lttb = "0.2.0"
ocl = {version = "0.19.3", optional = true}
rand = {version = "0.8.5", optional = true}
#zfp-sys = {version = "*", optional = true}#, features = ["cuda"]}
zfp-sys = {version = "0.1.10", optional = true}#, git = "https://github.com/jvo203/zfp-sys.git"}
ipp-sys = { version = "0.4.5", features=["2019"], optional = true }
fpzip-sys = "0.1.5"

#rulinalg = "*"
#linearkalman = "*"
#rav1e = { git = "https://github.com/xiph/rav1e.git", branch = "master" }
#openjpeg2-sys = "*"
